test-cases/negative/test_132_break_in_wrong_place.lay
# negative test: break statement outside loop
# expected: parser should reject this

if true then
  break
end if


